pluma_parser/tests/snapshots/parse_success__type_assertion_basic.snap
---
source: pluma_parser/tests/parse_success.rs
expression: "1 :: Int"
---

=== Source ===
1 :: Int

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        0,
        8,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                0,
                8,
            ),
            kind: Expr(
                ExprNode {
                    pos: (
                        0,
                        8,
                    ),
                    kind: TypeAssertion {
                        expr: ExprNode {
                            pos: (
                                0,
                                1,
                            ),
                            kind: Literal(
                                LiteralNode {
                                    pos: (
                                        0,
                                        1,
                                    ),
                                    kind: IntDecimal(
                                        1,
                                    ),
                                },
                            ),
                            typ: Unknown,
                        },
                        asserted_type: TypeExprNode {
                            pos: (
                                5,
                                8,
                            ),
                            kind: Single(
                                TypeIdentifierNode {
                                    pos: (
                                        5,
                                        8,
                                    ),
                                    name: "Int",
                                    generics: [],
                                },
                            ),
                            typ: Unknown,
                        },
                    },
                    typ: Unknown,
                },
            ),
        },
    ],
}

