pluma_parser/tests/snapshots/parse_success__type_enum_constructor_args.snap
---
source: pluma_parser/tests/parse_success.rs
expression: "enum Thing\n  | Wow Int\n  | Cool(String)\n  | NoArg\n  | TupleArg (Int, String)"
---

=== Source ===
enum Thing
  | Wow Int
  | Cool(String)
  | NoArg
  | TupleArg (Int, String)

=== Comments ===
{}

=== AST ===
Module(0, 76) [
    TopLevelStatementNode {
        pos: (
            0,
            76,
        ),
        kind: TypeDef(
            TypeDefNode {
                pos: (
                    0,
                    76,
                ),
                visibility: Public,
                kind: Enum {
                    variants: [
                        EnumVariantNode {
                            pos: (
                                15,
                                22,
                            ),
                            kind: Constructor(
                                Ident(15, 18) "Wow",
                                TypeExprNode {
                                    pos: (
                                        19,
                                        22,
                                    ),
                                    kind: Single(
                                        TypeIdentifierNode {
                                            pos: (
                                                19,
                                                22,
                                            ),
                                            name: "Int",
                                            generics: [],
                                            constraints: None,
                                        },
                                    ),
                                    typ: Unknown,
                                },
                            ),
                        },
                        EnumVariantNode {
                            pos: (
                                27,
                                39,
                            ),
                            kind: Constructor(
                                Ident(27, 31) "Cool",
                                TypeExprNode {
                                    pos: (
                                        31,
                                        39,
                                    ),
                                    kind: Grouping(
                                        TypeExprNode {
                                            pos: (
                                                32,
                                                38,
                                            ),
                                            kind: Single(
                                                TypeIdentifierNode {
                                                    pos: (
                                                        32,
                                                        38,
                                                    ),
                                                    name: "String",
                                                    generics: [],
                                                    constraints: None,
                                                },
                                            ),
                                            typ: Unknown,
                                        },
                                    ),
                                    typ: Unknown,
                                },
                            ),
                        },
                        EnumVariantNode {
                            pos: (
                                44,
                                49,
                            ),
                            kind: Identifier(
                                Ident(44, 49) "NoArg",
                            ),
                        },
                        EnumVariantNode {
                            pos: (
                                54,
                                76,
                            ),
                            kind: Constructor(
                                Ident(54, 62) "TupleArg",
                                TypeExprNode {
                                    pos: (
                                        63,
                                        76,
                                    ),
                                    kind: UnlabeledTuple(
                                        [
                                            TypeExprNode {
                                                pos: (
                                                    64,
                                                    67,
                                                ),
                                                kind: Single(
                                                    TypeIdentifierNode {
                                                        pos: (
                                                            64,
                                                            67,
                                                        ),
                                                        name: "Int",
                                                        generics: [],
                                                        constraints: None,
                                                    },
                                                ),
                                                typ: Unknown,
                                            },
                                            TypeExprNode {
                                                pos: (
                                                    69,
                                                    75,
                                                ),
                                                kind: Single(
                                                    TypeIdentifierNode {
                                                        pos: (
                                                            69,
                                                            75,
                                                        ),
                                                        name: "String",
                                                        generics: [],
                                                        constraints: None,
                                                    },
                                                ),
                                                typ: Unknown,
                                            },
                                        ],
                                    ),
                                    typ: Unknown,
                                },
                            ),
                        },
                    ],
                },
                name: TypeIdentifierNode {
                    pos: (
                        5,
                        10,
                    ),
                    name: "Thing",
                    generics: [],
                    constraints: None,
                },
                generic_type_constraints: [],
            },
        ),
    },
]

