pluma_parser/tests/snapshots/parse_success__type_enum_same_line.snap
---
source: pluma_parser/tests/parse_success.rs
expression: enum Bool | True | False
---

=== Source ===
enum Bool | True | False

=== Comments ===
{}

=== AST ===
Module(0, 24) [
    TopLevelStatement(0, 24) TypeDef(
        TypeDefNode {
            pos: (
                0,
                24,
            ),
            visibility: Public,
            kind: Enum {
                variants: [
                    EnumVariantNode {
                        pos: (
                            12,
                            16,
                        ),
                        kind: Identifier(
                            Ident(12, 16) "True",
                        ),
                    },
                    EnumVariantNode {
                        pos: (
                            19,
                            24,
                        ),
                        kind: Identifier(
                            Ident(19, 24) "False",
                        ),
                    },
                ],
            },
            name: TypeIdentifierNode {
                pos: (
                    5,
                    9,
                ),
                name: "Bool",
                generics: [],
                constraints: None,
            },
            generic_type_constraints: [],
        },
    ),
]

