pluma_parser/tests/snapshots/parse_success__type_struct_across_lines.snap
---
source: pluma_parser/tests/parse_success.rs
expression: "struct Person (\n  name :: String,\n  age :: Int\n)"
---

=== Source ===
struct Person (
  name :: String,
  age :: Int
)

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        0,
        48,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                0,
                48,
            ),
            kind: TypeDef(
                TypeDefNode {
                    pos: (
                        0,
                        48,
                    ),
                    kind: Struct {
                        fields: [
                            (
                                IdentifierNode {
                                    pos: (
                                        18,
                                        22,
                                    ),
                                    name: "name",
                                },
                                TypeExprNode {
                                    pos: (
                                        26,
                                        32,
                                    ),
                                    kind: Single(
                                        TypeIdentifierNode {
                                            pos: (
                                                26,
                                                32,
                                            ),
                                            name: "String",
                                            generics: [],
                                        },
                                    ),
                                    typ: Unknown,
                                },
                            ),
                            (
                                IdentifierNode {
                                    pos: (
                                        36,
                                        39,
                                    ),
                                    name: "age",
                                },
                                TypeExprNode {
                                    pos: (
                                        43,
                                        46,
                                    ),
                                    kind: Single(
                                        TypeIdentifierNode {
                                            pos: (
                                                43,
                                                46,
                                            ),
                                            name: "Int",
                                            generics: [],
                                        },
                                    ),
                                    typ: Unknown,
                                },
                            ),
                        ],
                    },
                    name: TypeIdentifierNode {
                        pos: (
                            7,
                            13,
                        ),
                        name: "Person",
                        generics: [],
                    },
                    generic_type_constraints: [],
                },
            ),
        },
    ],
}

