pluma_parser/tests/snapshots/parse_success__type_trait_across_lines_two_fields.snap
---
source: pluma_parser/tests/parse_success.rs
expression: "trait HasNameAndAge\n  . name : String\n  . age : Int"
---

=== Source ===
trait HasNameAndAge
  . name : String
  . age : Int

=== Comments ===
{}

=== AST ===
Module(0, 51) [
    TopLevelStatement(0, 51) TypeDef(
        TypeDefNode {
            pos: (
                0,
                51,
            ),
            visibility: Public,
            kind: Trait {
                fields: [
                    (
                        Ident(24, 28) "name",
                        TypeExprNode {
                            pos: (
                                31,
                                37,
                            ),
                            kind: Single(
                                TypeIdentifierNode {
                                    pos: (
                                        31,
                                        37,
                                    ),
                                    name: "String",
                                    generics: [],
                                    constraints: None,
                                },
                            ),
                            typ: Unknown,
                        },
                    ),
                    (
                        Ident(42, 45) "age",
                        TypeExprNode {
                            pos: (
                                48,
                                51,
                            ),
                            kind: Single(
                                TypeIdentifierNode {
                                    pos: (
                                        48,
                                        51,
                                    ),
                                    name: "Int",
                                    generics: [],
                                    constraints: None,
                                },
                            ),
                            typ: Unknown,
                        },
                    ),
                ],
                methods: [],
            },
            name: TypeIdentifierNode {
                pos: (
                    6,
                    19,
                ),
                name: "HasNameAndAge",
                generics: [],
                constraints: None,
            },
            generic_type_constraints: [],
        },
    ),
]

