pluma_parser/tests/snapshots/parse_success__type_trait_same_line_two_fields.snap
---
source: pluma_parser/tests/parse_success.rs
expression: "trait HasNameAndAge . name : String . age : Int"
---

=== Source ===
trait HasNameAndAge . name : String . age : Int

=== Comments ===
{}

=== AST ===
Module(0, 47) [
    TopLevelStatement(0, 47) TypeDef(
        TypeDefNode {
            pos: (
                0,
                47,
            ),
            visibility: Public,
            kind: Trait {
                fields: [
                    (
                        Ident(22, 26) "name",
                        TypeExprNode {
                            pos: (
                                29,
                                35,
                            ),
                            kind: Single(
                                TypeIdentifierNode {
                                    pos: (
                                        29,
                                        35,
                                    ),
                                    name: "String",
                                    generics: [],
                                    constraints: None,
                                },
                            ),
                            typ: Unknown,
                        },
                    ),
                    (
                        Ident(38, 41) "age",
                        TypeExprNode {
                            pos: (
                                44,
                                47,
                            ),
                            kind: Single(
                                TypeIdentifierNode {
                                    pos: (
                                        44,
                                        47,
                                    ),
                                    name: "Int",
                                    generics: [],
                                    constraints: None,
                                },
                            ),
                            typ: Unknown,
                        },
                    ),
                ],
                methods: [],
            },
            name: TypeIdentifierNode {
                pos: (
                    6,
                    19,
                ),
                name: "HasNameAndAge",
                generics: [],
                constraints: None,
            },
            generic_type_constraints: [],
        },
    ),
]

